Solved the first easy problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ add_executable(
     src/akarithm/problem_1304.cpp
     src/akarithm/problem_1305.cpp
     src/akarithm/problem_5319.cpp
+    src/akarithm/problem_5328.cpp
 )
 
 target_include_directories(akarithm PRIVATE ${CMAKE_SOURCE_DIR}/doctest)
