Implemented solution to problem 264
The algorithm is really slow.
A potential would be to use std::set to remove repeating
calculations on the same tuple.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ add_executable(
     src/akarithm/problem_88.cpp
     src/akarithm/problem_206.cpp
     src/akarithm/problem_226.cpp
+    src/akarithm/problem_264.cpp
     src/akarithm/problem_297.cpp
     src/akarithm/problem_344.cpp
     src/akarithm/problem_345.cpp
