This branch comes with a lot of other changes.
1. Fix group_by so it shouldn't blow up when iter_begin == iter_end
2. Now try to use <functional> whenever possible.
3. Of course, some close-to-correct implementation of solution to problem 18.

To expand on 3, the only problem we have right now is dealing with the number 0.
If there 1 zero, then we must find the case where 3 elements add up to `target`.

The "simplest" solution is probably to call N-Sum multiple times for N={3,2}.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(
     src/akarithm/problem_5.cpp
     src/akarithm/problem_14.cpp
     src/akarithm/problem_13.cpp
+    src/akarithm/problem_18.cpp
     src/akarithm/problem_19.cpp
     src/akarithm/problem_21.cpp
     src/akarithm/problem_22.cpp
