Rebased on top of master

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ add_executable(
     src/akarithm/problem_1337.cpp
     src/akarithm/problem_1338.cpp
     src/akarithm/problem_1339.cpp
+    src/akarithm/problem_1346.cpp
 )
 
 target_include_directories(akarithm PRIVATE ${CMAKE_SOURCE_DIR}/doctest)
