--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(
   test/util/generic/split.cpp
   test/util/generic/zip.cpp
   test/util/generic/sliding_window.cpp
-  test/util/generic/bst_search.cpp)
+  test/util/generic/bst_search.cpp 
+  test/math/series/harmonic_series.cpp)
 
 target_include_directories(akarithm PRIVATE ${CMAKE_SOURCE_DIR}/doctest)
